# agent-monitor

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: v2-unified-session-manager.md
implementation-plans/: issue-1-agent-monitor.md
scripts/: statusline-sidecar.sh  test
src/agent_monitor/: __init__.py  __main__.py  app.py  codex_sidecar.py  config.py  hosts.py  hyprland.py  models.py  monitor.tcss  procfs.py  registry.py  sidecar.py  ssh.py  statusline.py  workspace.py  zellij.py
src/agent_monitor/clients/: __init__.py  codex.py
tests/: test_agent_sidecar.py  test_app.py  test_cli.py  test_codex_client.py  test_codex_sidecar.py  test_config.py  test_hosts.py  test_hyprland.py  test_models.py  test_procfs.py  test_registry.py  test_sidecar.py  test_ssh.py  test_statusline.py  test_workspace.py  test_zellij.py
